<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Switch
            android:id="@+id/switch_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_enable_photo" />

        <Switch
            android:id="@+id/switch_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_enable_video" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/label_photo_path" />

        <EditText
            android:id="@+id/edit_photo_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" />

        <Button
            android:id="@+id/button_import_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_import_photo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/label_video_path" />

        <EditText
            android:id="@+id/edit_video_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" />

        <Button
            android:id="@+id/button_import_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_import_video" />

        <Button
            android:id="@+id/button_save_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/button_save" />

    </LinearLayout>
</ScrollView>
